Check HTML - mengedit html 1 s/d 4 , menambah dokumentasi ss

--- a/public html/1. Tampak Siring.html
+++ b/public html/1. Tampak Siring.html
@@ -3,83 +3,105 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Tampak Siring</title>
+    <title>Wisata Ubud Bali</title>
     <link rel="stylesheet" type="text/css" href="build/build.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/prism/themes/prism.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/todc-bootstrap-main/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="build/main-presentation.css">
+    <link href="test.css" rel="stylesheet" type="text/css">
   </head>
-  <body>
+  <body class="classic">
+    <nav role="navigation" class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" data-toggle="collapse" data-target="presentation-chooser" class="navbar-toggle"><span class="sr-only"></span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="index.html" class="navbar-brand">Wisata Ubud Bali</a>
+        </div>
+        <div id="presentation-chooser" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="dropdown"><a data-toggle="dropdown" href="#" class="dropdown-toggle">Pilih Presentasi <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="1. Tampak Siring.html">Tampak Siring</a></li>
+                <li><a href="2. Puri Ubud.html">Puri Ubud</a></li>
+                <li><a href="3. Pura Taman Saraswati.html">Pura Taman Saraswati</a></li>
+                <li><a href="4. Tari Kecak Ubud.html">Tari Kecak Ubud</a></li>
+                <li><a href="5. Lempad House.html">Lempad House</a></li>
+                <li><a href="6. Ayung Rafting.html">Ayung Rafting</a></li>
+                <li><a href="7. Sawah Terasering Ubud.html">Sawah Terasering Ubud</a></li>
+                <li><a href="8. Ubud Monkey Forest.html">Ubud Monkey Forest</a></li>
+                <li><a href="9. Arma Museum Ubud.html">Arma Museum Ubud</a></li>
+                <li><a href="10. Goa Gajah Ubud.html">Goa Gajah Ubud</a></li>
+                <li><a href="11. Gunung Kawi Bali.html">Gunung Kawi Bali</a></li>
+                <li><a href="12. Air Terjun Tegenungan.html">Air Terjun Tegenungan</a></li>
+                <li><a href="13. Tirta Sari Legong.html">Tirta Sari Legong (Percabangan)</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <article>
       <section>
-        <h1>Tampak Siring</h1>
+        <h1>Tampak Siring</h1><img src="images/Tampak Siring - 1.jpg" height="300" width="600" class="big">
       </section>
       <section>
-        <h2>Tampak Siring</h2>
-        <p>
-          <Tampak>Siring, nama sebuah kecamatan di kabupaten Gianyar, luas dari wilayah kecamatan Tampak Siring, sebesar 42,63 kilometer persegi. Jika anda berangkat dari airport Ngurah Rai Denpasar, maka anda perlu waktu satu jam lima belas menit, untuk ke tempat wisata di Ubud ini dengan mobil. Tampak Siring lebih dikenal dikalangan wisatawan sebagai sebuah pura yang bernama Tirta Empul.</Tampak>
-        </p>
+        <h2>Sejarah Tampak Siring</h2><img src="images/Tampak Siring - 2.jpg" height="300" width="600" class="big">
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text"><img src="images/Tampak Siring - 1.jpg" class="big"></section>
       <section>
-        <p>
-          <Tirta>Empul adalah nama sebuah pura yang terletak di kecamatan Tampak Siring. Pura Tirta Empul banyak dikunjungi para wisatawan, baik dari mancanegara maupun wisatawan domestik. Objek wisata Tirta Empul, merupakan salah satu, tempat liburan di Bali yang wajib dikunjungi. Di pura Tirta Empul, terdapat mata air dan juga digunakan oleh masyarakat pemeluk agama Hindu, untuk permandian dan memohon tirta suci.</Tirta>
-        </p>
-      </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text"><img src="images/Tampak Siring - 2.jpg" class="big"></section>
-      <section>
-        <h1>Sejarah Tampak Siring</h1>
+        <p>Tampak Siring, nama sebuah kecamatan di kabupaten Gianyar, luas dari wilayah kecamatan Tampak Siring, sebesar 42,63 kilometer persegi. Jika anda berangkat dari airport Ngurah Rai Denpasar, maka anda perlu waktu satu jam lima belas menit, untuk ke tempat wisata di Ubud ini dengan mobil. Tampak Siring lebih dikenal dikalangan wisatawan sebagai sebuah pura yang bernama Tirta Empul.</p>
+        <P>Tirta Empul adalah nama sebuah pura yang terletak di kecamatan Tampak Siring. Pura Tirta Empul banyak dikunjungi para wisatawan, baik dari mancanegara maupun wisatawan domestik. Objek wisata Tirta Empul, merupakan salah satu, tempat liburan di Bali yang wajib dikunjungi. Di pura Tirta Empul, terdapat mata air dan juga digunakan oleh masyarakat pemeluk agama Hindu, untuk permandian dan memohon tirta suci.</P>
       </section>
       <section>
         <h2>
-          <Sejarah>Tampak Siring Pura Tirta Empul</Sejarah>
+          <Sejarah>Tampak Siring Pura Tirta Empul</Sejarah><img src="images/Tampak Siring - 3.jpg" height="250" width="600" class="big">
         </h2>
         <p>
           <Nama>Tampak Siring berasal dari kata Tampak yang berarti telapak dan Siring berarti miring. Usana Bali salah satu lontar yang menceritakan tentang sejarah Tampak Siring Bali. Telapak yang ada dalam nama tempat wisata ini, diceritakan sebagai telapak dari raja yang bernama Mayadenawa.</Nama>
         </p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text"><img src="images/Tampak Siring - 3.jpg" class="big"></section>
       <section>
         <p>
           <Mayadenawa>diceritakan seorang raja sakti, tapi memiliki sifat jahat dan beraggapan dirinya adalah seorang dewa. Karena bersifat jahat, maka Dewa Indra mengirim pasukan beliau, untuk menghancurkan Mayadenawa. Mayadenawa kalah perang melawan Dewa Indra dan Mayadenawa lari kehutan. Untuk menghilangkan jejak, Mayadenawa berjalan dengan memiringkan kakinya ke tengah hutan.</Mayadenawa>
         </p>
-      </section>
-      <section>
         <p>
           <Walaupun>Mayadenawa berusaha menghilangkan jejak, tapi usahanya melarikan diri gagal. Sebelum berhasil ditangkap oleh pasukan dewa Indra, Mayadenawa menciptakan mata air beracun. Dengan mata air beracun, Mayadenawa berhasil membunuh sebagian dari pasukan dewa Indra, yang mengejar Mayadenawa.</Walaupun>
         </p>
       </section>
       <section>
-        <p>
-          <Untuk>mengatasi mata air beracun dari Mayadenawa, Dewa Indra menciptakan mata air penawar racun. Mata air ini yang bernama Tirta Empul (air suci), oleh karena itu Pura yang memiliki mata air ini disebut dengan nama pura Tirta Empul. Hutan yang digunakan untuk Mayadenawa melarikan diri, dengan posisi kakinya dimiringkan inilah yang sekarang menjadi kawasan wisata Tampak Siring. Lihat disini, lokasi dari Pura Tirta Empul di Google Map.</Untuk>
-        </p>
+        <p>Untuk mengatasi mata air beracun dari Mayadenawa, Dewa Indra menciptakan mata air penawar racun. Mata air ini yang bernama Tirta Empul (air suci), oleh karena itu Pura yang memiliki mata air ini disebut dengan nama pura Tirta Empul. Hutan yang digunakan untuk Mayadenawa melarikan diri, dengan posisi kakinya dimiringkan inilah yang sekarang menjadi kawasan wisata Tampak Siring.</p>
       </section>
       <section>
-        <h2>Istana Tampak Siring </h2>
-        <h3>Tempat Wisata Di Bali</h3>
+        <h2>Istana Tampak Siring </h2><img src="images/Tampak Siring -4.jpg" height="300" width="600" class="big">
+        <h3>>> Tempat Wisata Di Bali <<</h3>
       </section>
       <section>
         <p>selain pura,di tempat wisata ini terdapat istana kepresidenan yang didirikan oleh presiden pertama indonesia,IR soekarno sebagai tempat peristirahatan beliau saat berkunjung ke Bali. Istana tampak Siring dibangun dari tahun 1957 - 1960.</p>
-      </section>
-      <section>
         <p>Pembangunan istana kepresidenan Tampaksiring dilakukan secara perlahan-lahan dan mengalami tahapan. Artiktek yang mendesain istana kepresidenan adalah RM Soedarsono. Bangunan awal yang di bangun pada tahun 1957 adalah wisma Merdeka dan wisma Yudistira.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text"><img src="images/Tampak Siring -4.jpg" class="big"></section>
       <section>
         <p>Istana Tampak Siring mengalami penambahan bangunan pada tahun 2003, yang diperuntukan untuk KTT ASEAN Summit XIV. Penambahan bangunan pada Istana Tampak Siring, berupa bangunan untuk sarana konfrensi dan resepsi tamu negara. Balai Wantilan yang ada di Istana Tampak Siring, juga mengalami renovasi untuk acara pertujukan kesenian tamu negara.</p>
         <p>Tujuan dari pembangunan istana kepresidenan ini, sebagai tempat Presiden, keluarga presiden dan tamu negara beristirahat saat berkunjung ke pulau Bali.</p>
       </section>
       <section>
         <h2>Cara Terbaik ke Pura Tirta Empul Tampak Siring</h2>
-      </section>
-      <section>
         <p>Jika anda liburan ke Bali, sebaiknya anda meluangkan waktu untuk datang ke kawasan wisata pura Tirta Empul dan berkunjung ke istana presiden. Banyak pengalaman dan hal baru yang akan anda ketahui, jika anda berwisata ke pura Tirta Empul. Jika anda menyukai objek wisata Tirta Empul, maka anda pasti akan menyukai objek wisata pura Taman Ayun Mengwi.</p>
         <p>Tentunya saat ingin wisata ke pura Tirta Empul, anda pastinya akan memerlukan sarana transfortasi. Saat ini di Bali belum ada sarana transfortasi umum, dari tempat wisata Bali selatan menuju ke kawasan wisata pura Tirta Empul.</p>
       </section>
       <section>
         <p>Jika anda menginap di kawasan wisata Ubud, menggunakan taksi salah satu saranan transfortasi yang dapat anda gunakan. Jika anda berencana mengunjungi lebih dari satu tempat wisata di Bali, tidak hanya ke pura Tirta Empul. Maka menggunakan jasa Bali sewa mobil supir salah satu cara terbaik untuk mendapatkan sarana transportasi murah</p>
-      </section>
-      <section>      
         <p>Selain menyediakan jasa sewa mobil murah di Bali dengan supir, kami juga menyediakan jasa paket wisata di Bali untuk wisata ke pura Tirta Empul. Sebagian besar pelanggan kami yang memilih paket wisata saat liburan di Bali, tidak ingin ribet untuk memikirkan akan, biaya tiket masuk, biaya parkir kendaraan, biaya bahan bakar minyak serta biaya makan. Selain tidak ribet, dengan membeli paket wisata ke Bali, total biaya liburan akan jauh lebih murah dari pada anda tidak membeli paket tour.</p>
       </section>
     </article>
-    <script src="build/build.js"></script>
   </body>
+  <script src="build/build.js"></script>
+  <script src="bower_components/bespoke.js/dist/bespoke.min.js"></script>
+  <script src="bower_components/bespoke-bullets/dist/bespoke-bullets.min.js"></script>
+  <script src="bower_components/bespoke-scale/dist/bespoke-scale.min.js"></script>
+  <script src="bower_components/bespoke-hash/dist/bespoke-hash.min.js"></script>
+  <script src="bower_components/bespoke-progress/dist/bespoke-progress.min.js"></script>
+  <script src="bower_components/bespoke-state/dist/bespoke-state.min.js"></script>
+  <script src="bower_components/prism/prism.js"></script>
+  <script src="bower_components/prism/components/prism-bash.min.js"></script>
+  <script src="scripts/main.js"></script>
+  <script src="bower_components/jquery/jquery.min.js"></script>
+  <script src="bower_components/todc-bootstrap-main/dist/js/bootstrap.min.js"></script>
 </html>
