--- a/public html/2. Puri Ubud.html
+++ b/public html/2. Puri Ubud.html
@@ -3,34 +3,60 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Puri Ubud</title>
+    <title>Wisata Ubud Bali</title>
     <link rel="stylesheet" type="text/css" href="build/build.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/prism/themes/prism.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/todc-bootstrap-main/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="build/main-presentation.css">
+    <link href="test.css" rel="stylesheet" type="text/css">
   </head>
-  <body>
+  <body class="classic">
+    <nav role="navigation" class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" data-toggle="collapse" data-target="presentation-chooser" class="navbar-toggle"><span class="sr-only"></span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="index.html" class="navbar-brand">Wisata Ubud Bali</a>
+        </div>
+        <div id="presentation-chooser" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="dropdown"><a data-toggle="dropdown" href="#" class="dropdown-toggle">Pilih Presentasi <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="1. Tampak Siring.html">Tampak Siring</a></li>
+                <li><a href="2. Puri Ubud.html">Puri Ubud</a></li>
+                <li><a href="3. Pura Taman Saraswati.html">Pura Taman Saraswati</a></li>
+                <li><a href="4. Tari Kecak Ubud.html">Tari Kecak Ubud</a></li>
+                <li><a href="5. Lempad House.html">Lempad House</a></li>
+                <li><a href="6. Ayung Rafting.html">Ayung Rafting</a></li>
+                <li><a href="7. Sawah Terasering Ubud.html">Sawah Terasering Ubud</a></li>
+                <li><a href="8. Ubud Monkey Forest.html">Ubud Monkey Forest</a></li>
+                <li><a href="9. Arma Museum Ubud.html">Arma Museum Ubud</a></li>
+                <li><a href="10. Goa Gajah Ubud.html">Goa Gajah Ubud</a></li>
+                <li><a href="11. Gunung Kawi Bali.html">Gunung Kawi Bali</a></li>
+                <li><a href="12. Air Terjun Tegenungan.html">Air Terjun Tegenungan</a></li>
+                <li><a href="13. Tirta Sari Legong.html">Tirta Sari Legong (Percabangan)</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <article>
       <Section>
-        <h1>Puri Ubud </h1><img src="images/istana-puri-saren-ubud-bali.jpg">
+        <h1>Puri Ubud </h1><img src="images/istana-puri-saren-ubud-bali.jpg" height="300" width="600">
       </Section>
       <section>
         <h2>Sejarah Puri Ubud </h2>
         <p>Pada saat kerajaan Majapahit runtuh di abad ke 15, maka terjadi eksodus besar-besaran dari bangsawan Jawa untuk migrasi ke pulau Bali. Bangsawan dari pulau Jawa inilah yang mendirikan kerajaan Gelgel yang berada di kabupaten Klungkung, kabupaten di bagian tenggara pulau Bali. Kerajaan Gelgel inilah yang memberikan perlindungan kepada para bangsawan dari Jawa yang migrasi ke pulau Bali. Bangsawan dari Jawa yang membawa sistem kasta di Bali.</p>
-      </section>
-      <section>       
         <p>Pada abad ke 17 banyak berdiri kerajaan baru di wilayah pulau Bali, salah satunya di Ubud. Pada abad ke 17, banyak di bangun rumah para bangsawan di Ubud yang di beri nama Puri. Pada periode ini, banyak terjadi peperangan antar kerajaan di Bali, yang memperebutkan kekuasaan akan perluasan daerah.</p>
       </section>
       <Section>
-        <P>Seorang pangeran dari kerajaan Gelgel Klungkung, dikirim ke daerah desa Sukawati untuk membangun sebuah istana kerajaan yang memiliki keindahan arsitektur agar ditujukan untuk kekuasaan di wilayah Gianyar. Pada saat pembangunan istana kerajaan di Sukawati, banyak seniman Bali dari berbagai daerah di kirim ke daerah Sukawati untuk membantu pembangunan istana. Setelah pembagunan istana di Sukawati selesai, banyak dari seniman memilih untuk tinggal di Sukawati. Oleh karena itu sampai saat ini, daerah Sukawati menjadi salah satu pusat seni baik seni tari, seni lukis, seni patung ataupun seni musik dan yang terkenal adalah pasar seni Sukawati.</P>
+        <P>Seorang pangeran dari kerajaan Gelgel Klungkung, dikirim ke daerah desa Sukawati untuk membangun sebuah istana kerajaan yang memiliki keindahan arsitektur agar ditujukan untuk kekuasaan di wilayah Gianyar. Pada saat pembangunan istana kerajaan di Sukawati, banyak seniman Bali dari berbagai daerah di kirim ke daerah Sukawati untuk membantu pembangunan istana. Setelah pembagunan istana di Sukawati selesai, banyak dari seniman memilih untuk tinggal di Sukawati. Oleh karena itu sampai saat ini, daerah Sukawati menjadi salah satu pusat seni baik seni tari, seni lukis, seni patung ataupun seni musik dan yang terkenal adalah pasar seni Sukawati. Setelah berhasilnya di bangun istana di Sukawati, para prajurit istana Sukawati pada akhir abad 17 di kirim ke Ubud, untuk mengamankan Ubud yang sering terjadi konflik.</P>
       </Section>
       <section>
-        <p>Setelah berhasilnya di bangun istana di Sukawati, para prajurit istana Sukawati pada akhir abad 17 di kirim ke Ubud, untuk mengamankan Ubud yang sering terjadi konflik. Konflik yang terjadi di Ubud pada akhir abad ke 17, antara dua orang sepupu, yang satu berada di wilayah Padang Tegal Ubud dan yang lagi satu berada di wilayah Taman Ubud, yang berada di sebelah utara wilayah Padang Tegal Ubud. Peperangan antar ke dua sepupu ini, membuat raja Sukawati mengutus ke dua saudarnya untuk mengamankan wilayah Ubud.</p>
+        <p>Konflik yang terjadi di Ubud pada akhir abad ke 17, antara dua orang sepupu, yang satu berada di wilayah Padang Tegal Ubud dan yang lagi satu berada di wilayah Taman Ubud, yang berada di sebelah utara wilayah Padang Tegal Ubud. Peperangan antar ke dua sepupu ini, membuat raja Sukawati mengutus ke dua saudarnya untuk mengamankan wilayah Ubud.</p>
+        <P>Saudara dari Raja Sukawati tersebut adalah Tjokorde Ngurah Tabanan yang dikirim ke wilayah Peliatan Ubud dan Tjokorde Tangkeban ke wilayah Sambahan Ubud. Kedua saudara dari raja Sukawati kemudian membangun istana di daerah tujuan mereka masing-masing dengan tujuan mengamankan wilayah Ubud. Setelah Tjokorde Ngurah Tabanan yang membangun kerajaan di Peliatan Ubud, maka Tjokorde Ngurah Tabanan dengan dibantu oleh Raja Mengwi, memenuhi wilayah Ubud dengan penduduk. Dengan bertambahnya jumlah penduduk di Ubud, maka perekonomian mulai berkembang.</P>
       </section>
       <Section>
-        <P>Saudara dari Raja Sukawati tersebut adalah Tjokorde Ngurah Tabanan yang dikirim ke wilayah Peliatan Ubud dan Tjokorde Tangkeban ke wilayah Sambahan Ubud. Kedua saudara dari raja Sukawati kemudian membangun istana di daerah tujuan mereka masing-masing dengan tujuan mengamankan wilayah Ubud. Setelah Tjokorde Ngurah Tabanan yang membangun kerajaan di Peliatan Ubud, maka Tjokorde Ngurah Tabanan dengan dibantu oleh Raja Mengwi, memenuhi wilayah Ubud dengan penduduk. Dengan bertambahnya jumlah penduduk di Ubud, maka perekonomian mulai berkembang.</P>
-      </Section>
-      <Section>
         <p>Pada abad ke 19, Belanda mulai memasuki pulau Bali. Beberapa kerajaan seperti kerajaan Mengwi merasa tidak senang akan kehadiran Belanda di daerah mereka. Kecerdikan Belanda yang mampu memprovokasi musuh lama kerajaan Mengwi, untuk membuat aliansi untuk menyerang kerajaan Mengwi. Karena di serang oleh banyak musuh, maka kerajaan Mengwi mengalami kekelahan telak, yang membuat wilayah mereka dibagi-bagi oleh kerajaan aliansi penyerang.</p>
-      </Section>
-      <Section>
         <p>Pemerintahan Belanda mulai ikut campur dalam urusan politik di Bali pada awal abad ke 19, dengan menyerang kerajaan-kerajaan di Badung, kerajaanBuleleng dan kerajaan Klungkung. Peperangan besar pun terjadi, perang ini di Bali lebih dikenal dengan nama Puputan. Pada awal abad 21 di bawah pemerintahan Tjokorde Gede Raka Sukawati, wilayah Ubud menjadi wilayah cabang dari Sukawati. Pada tahun 1981, maka di Ubud ditetapkan sebagai sebuah kecamatan di wilayah kabupaten Gianyar dengan mencangkup wilayah desa Tegallalang, Peliatan, Mas dan Kedewatan.</p>
       </Section>
       <Section>
@@ -38,12 +64,21 @@
         <p>Pada awal tahun 1930an, banyak wisatawan asing yang datang ke Bali, terutama mengunjungi wilayah Ubud. Kenapa hanya di Ubud? Hal ini dikarenakan kemampuan dari Tjokorde Gede Agung Sukawati yang memerintah Ubud (saudara Raja Sukawati - Tjokorde Gede Raka Sukawati) dalam bahasa Inggris dan bahasa Belanda. Selain itu karena kemampuan dan pengetahuan raja Ubud akan bisnis, maka di bangunlah guest house untuk tempat wisatawan menginap di Ubud. Perkembangan pariwisata Ubud juga tidak lepas dari peran Raja Sukawati, kakak dari Raja Ubud yang mengundang seniman lukis Walter Spiers ke Ubud untuk tinggal dan melukis di Ubud.</p>
       </Section>
       <Section>
-        <p>Tinggalnya Walter Spiers di Ubud menjadikan trend di kalangan seniman lukis asing untuk berkarya di Ubud. Melalui lukisan inilah, Ubud mulai terkenal ke mancanegara, karena lukisan dari pelukis asing, mengambarkan tentang kehidupan di Ubud, serta pelukis asing melakukan pameran lukisan di luar negeri.</p>
-      </Section>
-      <Section>
+        <p>Tinggalnya Walter Spiers di Ubud menjadikan trend di kalangan seniman lukis asing untuk berkarya di Ubud. Melalui lukisan inilah, Ubud mulai terkenal ke mancanegara, karena lukisan dari pelukis asing, mengambarkan tentang kehidupan di Ubud, serta pelukis asing melakukan pameran lukisan di luar negeri. </p>
         <p>Sebuah asosiasi seni lukis didirikan oleh Tjokorde Gede Agung (raja Ubud), Walter Spies dan Rudolf Bonnet, serta beberapa seniman lokal yang diberi nama Pita Maha. Tujuan dari asosiasi seni lukis ini adalah mengumpulkan para seniman Bali, untuk mengajarkan kesenian kepada para muda-mudi di daerah Ubud. Oleh sebab itu, sampai saat ini, objek wisata Ubud menjadi pusat museum di Bali. Museum yang ada di Ubud seperti Arma Museum Ubud dan Museum Puri Lukisan Ubud.</p>
       </Section>
     </article>
-    <script src="build/build.js"></script>
   </body>
+  <script src="build/build.js"></script>
+  <script src="bower_components/bespoke.js/dist/bespoke.min.js"></script>
+  <script src="bower_components/bespoke-bullets/dist/bespoke-bullets.min.js"></script>
+  <script src="bower_components/bespoke-scale/dist/bespoke-scale.min.js"></script>
+  <script src="bower_components/bespoke-hash/dist/bespoke-hash.min.js"></script>
+  <script src="bower_components/bespoke-progress/dist/bespoke-progress.min.js"></script>
+  <script src="bower_components/bespoke-state/dist/bespoke-state.min.js"></script>
+  <script src="bower_components/prism/prism.js"></script>
+  <script src="bower_components/prism/components/prism-bash.min.js"></script>
+  <script src="scripts/main.js"></script>
+  <script src="bower_components/jquery/jquery.min.js"></script>
+  <script src="bower_components/todc-bootstrap-main/dist/js/bootstrap.min.js"></script>
 </html>
