--- a/public html/3. Pura Taman Saraswati.html
+++ b/public html/3. Pura Taman Saraswati.html
@@ -3,13 +3,45 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Pura Taman Saraswati</title>
+    <title>Wisata Ubud Bali</title>
     <link rel="stylesheet" type="text/css" href="build/build.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/prism/themes/prism.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/todc-bootstrap-main/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="build/main-presentation.css">
+    <link href="test.css" rel="stylesheet" type="text/css">
   </head>
-  <body>
+  <body class="classic">
+    <nav role="navigation" class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" data-toggle="collapse" data-target="presentation-chooser" class="navbar-toggle"><span class="sr-only"></span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="index.html" class="navbar-brand">Wisata Ubud Bali</a>
+        </div>
+        <div id="presentation-chooser" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="dropdown"><a data-toggle="dropdown" href="#" class="dropdown-toggle">Pilih Presentasi <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="1. Tampak Siring.html">Tampak Siring</a></li>
+                <li><a href="2. Puri Ubud.html">Puri Ubud</a></li>
+                <li><a href="3. Pura Taman Saraswati.html">Pura Taman Saraswati</a></li>
+                <li><a href="4. Tari Kecak Ubud.html">Tari Kecak Ubud</a></li>
+                <li><a href="5. Lempad House.html">Lempad House</a></li>
+                <li><a href="6. Ayung Rafting.html">Ayung Rafting</a></li>
+                <li><a href="7. Sawah Terasering Ubud.html">Sawah Terasering Ubud</a></li>
+                <li><a href="8. Ubud Monkey Forest.html">Ubud Monkey Forest</a></li>
+                <li><a href="9. Arma Museum Ubud.html">Arma Museum Ubud</a></li>
+                <li><a href="10. Goa Gajah Ubud.html">Goa Gajah Ubud</a></li>
+                <li><a href="11. Gunung Kawi Bali.html">Gunung Kawi Bali</a></li>
+                <li><a href="12. Air Terjun Tegenungan.html">Air Terjun Tegenungan</a></li>
+                <li><a href="13. Tirta Sari Legong.html">Tirta Sari Legong (Percabangan)</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <article>
       <Section>
-        <h1>Pura Taman Saraswati</h1><img src="images/Pura-Taman-Saraswati-Ubud.jpg">
+        <h1>Pura Taman Saraswati</h1><img src="images/Pura-Taman-Saraswati-Ubud.jpg" height="300" width="600">
       </Section>
       <section>
         <h2>Penjelasan Pura Taman Saraswati</h2>
@@ -22,12 +54,12 @@
       <section>
         <h2>Menonton Tari Kecak Di Pura Taman Saraswati Ubud</h2>
         <p>Sebelum kami menuliskan tentang tari kecak di Pura Taman Saraswati Ubud. Ada baiknya kami menuliskan sedikit tentang pura Pura Taman Saraswati Ubud.</p>
-      </section>
-      <Section>
         <P>Seperti yang anda tahu, pura adalah tempat suci agama hindu di Bali dan pura Taman Saraswati Ubud adalah salah satunya. Pura ini, sesuai dengan namanya adalah tempat pemujaan Dewi Saraswati (Dewi Pengetahuan). Lokasi dari pura ini, terdapat di jalan raya Ubud.</P>
+      </section>
+      <section>
         <p>Pura Taman Saraswati Ubud, sedikit berbeda dari pura-pura lain yang ada di Bali. Pura ini memiliki kolam yang banyak terdapat bunga teratai dan kolam teratai inilah, daya tarik utama dari pura Saraswati.</p>
         <p>Jika anda menyukai melihat seni ukir khas Ubud Bali, disinilah tempatnya untuk melihat. Hampir setiap bangunan pura, terdapat seni ukir dari para seniman Ubud.</p>
-      </Section>
+      </section>
       <section>
         <h2>Pura Kolam Bunga Teratai</h2>
         <p>Pura ini memiliki panggung pemantasan tari kecak dan panggung di kelilingi oleh kolam teratai. Saat anda liburan di Bali dan berencana untuk menonton tarian kecak Ubud di Pura Taman Saraswati, sebaiknya anda memperhatikan terlebih dahulu, jadwal pementasan tarian kecak di Pura Taman Saraswat Ubud. Tidak setiap hari, diadakan pementasan tarian kecak di pura ini.</p>
@@ -43,8 +75,6 @@
         <p>Bagi anda yang tidak memilih hotel tempat menginap di Ubud dan berencana untuk wisata ke Ubud, ada beberapa cara yang dapat anda lakukan untuk dapat berwisata ke objek wisata Ubud.</p>
         <h3>1. Mencari Jasa Sewa Mobil Dengan Supir Di Bali</h3>
         <p>Dengan cara menyewa mobil + driver di Bali, akan sangat memudahkan anda untuk berpergian dari satu tempat wisata di Bali ke tempat wisata yang lain, tanpa memikirkan mencari tempat parkir, mencari jalan pintas, serta memikirakan tetang kemacetan jalanan.</p>
-      </Section>
-      <Section>
         <p>Objek wisata di Ubud, sangat jarang tersedia tempat parkir mobil, hampir sebagian besar, orang parkir di penggir jalan dan sangat sering penuh. Karena hal ini, kami sangat menyarankan anda untuk mencari penyedia jasa rent car di Bali dengan supir.</p>
       </Section>
       <Section>
@@ -53,6 +83,17 @@
         <p>Kelebihan dari membeli paket tour murah di Bali, selain anda mendapat kelebihan layanan jasa sewa mobil dengan supir, jadwal tour anda akan terencana dan terarah. Selain itu, budget liburan anda akan terencana. </p>
       </Section>
     </article>
-    <script src="build/build.js"></script>
   </body>
+  <script src="build/build.js"></script>
+  <script src="bower_components/bespoke.js/dist/bespoke.min.js"></script>
+  <script src="bower_components/bespoke-bullets/dist/bespoke-bullets.min.js"></script>
+  <script src="bower_components/bespoke-scale/dist/bespoke-scale.min.js"></script>
+  <script src="bower_components/bespoke-hash/dist/bespoke-hash.min.js"></script>
+  <script src="bower_components/bespoke-progress/dist/bespoke-progress.min.js"></script>
+  <script src="bower_components/bespoke-state/dist/bespoke-state.min.js"></script>
+  <script src="bower_components/prism/prism.js"></script>
+  <script src="bower_components/prism/components/prism-bash.min.js"></script>
+  <script src="scripts/main.js"></script>
+  <script src="bower_components/jquery/jquery.min.js"></script>
+  <script src="bower_components/todc-bootstrap-main/dist/js/bootstrap.min.js"></script>
 </html>
