Check HTML - mengedit 5s/d 8

--- a/public html/6. Ayung Rafting.html
+++ b/public html/6. Ayung Rafting.html
@@ -3,43 +3,86 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Ayung Rafting</title>
+    <title>Wisata Ubud Bali</title>
     <link rel="stylesheet" type="text/css" href="build/build.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/prism/themes/prism.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/todc-bootstrap-main/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="build/main-presentation.css">
+    <link href="test.css" rel="stylesheet" type="text/css">
   </head>
-  <body>
+  <body class="classic">
+    <nav role="navigation" class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" data-toggle="collapse" data-target="presentation-chooser" class="navbar-toggle"><span class="sr-only"></span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="index.html" class="navbar-brand">Wisata Ubud Bali</a>
+        </div>
+        <div id="presentation-chooser" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="dropdown"><a data-toggle="dropdown" href="#" class="dropdown-toggle">Daftar Wisata <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="1. Tampak Siring.html">Tampak Siring</a></li>
+                <li><a href="2. Puri Ubud.html">Puri Ubud</a></li>
+                <li><a href="3. Pura Taman Saraswati.html">Pura Taman Saraswati</a></li>
+                <li><a href="4. Tari Kecak Ubud.html">Tari Kecak Ubud</a></li>
+                <li><a href="5. Lempad House.html">Lempad House</a></li>
+                <li><a href="6. Ayung Rafting.html">Ayung Rafting</a></li>
+                <li><a href="7. Sawah Terasering Ubud.html">Sawah Terasering Ubud</a></li>
+                <li><a href="8. Ubud Monkey Forest.html">Ubud Monkey Forest</a></li>
+                <li><a href="9. Arma Museum Ubud.html">Arma Museum Ubud</a></li>
+                <li><a href="10. Goa Gajah Ubud.html">Goa Gajah Ubud</a></li>
+                <li><a href="11. Gunung Kawi Bali.html">Gunung Kawi Bali</a></li>
+                <li><a href="12. Air Terjun Tegenungan.html">Air Terjun Tegenungan</a></li>
+                <li><a href="13. Tirta Sari Legong.html">Tirta Sari Legong (Percabangan)</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <article>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <h1>Ayung Rafting</h1><img src="images/ayung-rafting-ubud.jpg" width="500">
+      <section>
+        <h1>Ayung Rafting</h1><img src="images/ayung-rafting-ubud.jpg" height="300" width="600">
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">       
-        <p>Kegiatan rafting di Bali dapat dilakukan di beberapa sungai. Di sungai Telaga Waja atau lebih terkenal dengan nama rafting Telaga Waja dan sungai Ayung di Desa Payangan Ubud Bali, seperti yang anda tahu Ubud adalah salah satu objek wisata di Bali. Untuk menuju ke tempat ini menempuh waktu 1 jam dari Bandara Ngurah Rai Bali, melewati obyek wisata Kuta, objek wisata Sanur dan kota Denpasar.</p>
+      <section>       
+        <p>Kegiatan rafting di Bali dapat dilakukan di beberapa sungai. Di sungai Telaga Waja atau lebih terkenal dengan nama rafting Telaga Waja dan sungai Ayung di Desa Payangan Ubud Bali, seperti yang diketahui Ubud adalah salah satu objek wisata di Bali. Untuk menuju ke tempat ini menempuh waktu 1 jam dari Bandara Ngurah Rai Bali, melewati obyek wisata Kuta, objek wisata Sanur dan kota Denpasar.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <H2>Ayung Rafting Ubud Bali        </H2><img src="images/ayung-rafting.jpg" width="500">
+      <section>
+        <h2>Ayung Rafting Ubud Bali        </h2><img src="images/ayung-rafting.jpg" height="300" width="600">
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <P>Setelah sampai di tempat starting point, rafting di sungai Ayung akan segera dimulai. Para peserta akan diberi pengarahan oleh instruktur yang sudah terlatih dan berpengalaman dengan Ayung river rafting. Misalnya pengenalan alat-alat yang digunakan seperti jaket pelampung, dayung, perahu karet, posisi duduk di atas perahu, cara penyelamatkan diri jika perahu terbalik, dan hal- hal lainnya yang berkaitan dengan kenyamanan dan keselamatan peserta </P>
+      <section>
+        <P>Setelah sampai di tempat starting point, rafting di sungai Ayung akan segera dimulai. Para peserta akan diberi pengarahan oleh instruktur yang sudah terlatih dan berpengalaman dengan Ayung river rafting. Misalnya pengenalan alat-alat yang digunakan seperti jaket pelampung, dayung, perahu karet, posisi duduk di atas perahu, cara penyelamatkan diri jika perahu terbalik, dan hal- hal lainnya yang berkaitan dengan kenyamanan dan keselamatan peserta.</P>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <p>Masing-masing boat menampung 4 orang peserta ditambah 1 orang instruktur. Selama kurang lebih 2 jam anda akan mencoba mengarungi derasnya sungai Ayung yang menempuh jarak kurang lebih 12 km. Dalam perjalanan peserta dapat menikmati jeram-jeram sungai Ayung dan berfoto-foto di batu batu pinggir sungai yang latar belakangnya ukir-ukiran sepanjang ratusan meter. Hal ini mencerminkan kreatifitas seni yang tinggi dari orang Bali sehingga menjadi ciri khas dari obyek wisata rafting di sungai Ayung.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text"><img src="images/arung-jeram-sungai-ayung.jpg"></section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section><img src="images/arung-jeram-sungai-ayung.jpg" height="300" width="600"></section>
+      <section>
         <P>Bagi anak-anak yang ingin mencoba Ayung Rafting, tidak perlu khawatir karena airnya tidak terlalu deras dan jeramnya tidak menukik. Namun harus tetap ditemani orang tua masing-masing. Olahraga ini sangat seru dan menantang. Apalagi dilakukan beramai ramai bersama keluarga dan teman. </P>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <P>Setelah mengarungi air sungai Ayung sepanjang 12 km, peserta akan sampai di stopping point. Di tempat ini disediakan tempat beristirahat, ruang ganti, kamar mandi, dan handuk gratis. Kegiatan akan dilanjutkan dengan menikmati makan siang dengan menu buffet yang telah disediakan. Obyek wisata Ayung Rafting ramai dikunjungi wisatawan dari dalam negeri maupun mancanegara. Terutama menjelang Natal, Tahun Baru, liburan sekolah dan hari libur nasional lainnya. </P>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <h3>Payung Rafting</h3><img src="images/Payung-Rafting-Ubud.jpg">
+      <section>
+        <h3>Payung Rafting</h3><img src="images/Payung-Rafting-Ubud.jpg" height="300" width="600">
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <h3>Bali Adventure Rafting</h3><img src="images/bali-adventure-rafting-ubud1.jpg">
+      <section>
+        <h3>Bali Adventure Rafting</h3><img src="images/bali-adventure-rafting-ubud1.jpg" height="300" width="600">
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <h3>Sobek Rafting Ayung</h3><img src="images/sobek-rafting-ayung-ubud.jpg">
+      <section>
+        <h3>Sobek Rafting Ayung</h3><img src="images/sobek-rafting-ayung-ubud.jpg" height="300" width="600">
       </section>
     </article>
   </body>
   <script src="build/build.js"></script>
+  <script src="bower_components/bespoke.js/dist/bespoke.min.js"></script>
+  <script src="bower_components/bespoke-bullets/dist/bespoke-bullets.min.js"></script>
+  <script src="bower_components/bespoke-scale/dist/bespoke-scale.min.js"></script>
+  <script src="bower_components/bespoke-hash/dist/bespoke-hash.min.js"></script>
+  <script src="bower_components/bespoke-progress/dist/bespoke-progress.min.js"></script>
+  <script src="bower_components/bespoke-state/dist/bespoke-state.min.js"></script>
+  <script src="bower_components/prism/prism.js"></script>
+  <script src="bower_components/prism/components/prism-bash.min.js"></script>
+  <script src="scripts/main.js"></script>
+  <script src="bower_components/jquery/jquery.min.js"></script>
+  <script src="bower_components/todc-bootstrap-main/dist/js/bootstrap.min.js"></script>
 </html>
