--- a/public html/7. Sawah Terasering Ubud.html
+++ b/public html/7. Sawah Terasering Ubud.html
@@ -3,35 +3,78 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Sawah Terasering Ubud</title>
+    <title>Wisata Ubud Bali</title>
     <link rel="stylesheet" type="text/css" href="build/build.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/prism/themes/prism.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/todc-bootstrap-main/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="build/main-presentation.css">
+    <link href="test.css" rel="stylesheet" type="text/css">
   </head>
-  <body>
+  <body class="classic">
+    <nav role="navigation" class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" data-toggle="collapse" data-target="presentation-chooser" class="navbar-toggle"><span class="sr-only"></span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="index.html" class="navbar-brand">Wisata Ubud Bali</a>
+        </div>
+        <div id="presentation-chooser" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="dropdown"><a data-toggle="dropdown" href="#" class="dropdown-toggle">Daftar Wisata <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="1. Tampak Siring.html">Tampak Siring</a></li>
+                <li><a href="2. Puri Ubud.html">Puri Ubud</a></li>
+                <li><a href="3. Pura Taman Saraswati.html">Pura Taman Saraswati</a></li>
+                <li><a href="4. Tari Kecak Ubud.html">Tari Kecak Ubud</a></li>
+                <li><a href="5. Lempad House.html">Lempad House</a></li>
+                <li><a href="6. Ayung Rafting.html">Ayung Rafting</a></li>
+                <li><a href="7. Sawah Terasering Ubud.html">Sawah Terasering Ubud</a></li>
+                <li><a href="8. Ubud Monkey Forest.html">Ubud Monkey Forest</a></li>
+                <li><a href="9. Arma Museum Ubud.html">Arma Museum Ubud</a></li>
+                <li><a href="10. Goa Gajah Ubud.html">Goa Gajah Ubud</a></li>
+                <li><a href="11. Gunung Kawi Bali.html">Gunung Kawi Bali</a></li>
+                <li><a href="12. Air Terjun Tegenungan.html">Air Terjun Tegenungan</a></li>
+                <li><a href="13. Tirta Sari Legong.html">Tirta Sari Legong (Percabangan)</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <article>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <h1>Sawah Terasering Ubud</h1><img src="images/Sawah-Terasering-Ubud.jpg" width="400">
+      <section>
+        <h1>Sawah Terasering Ubud</h1><img src="images/Sawah-Terasering-Ubud.jpg" height="300" width="600">
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section> 
         <h2>Indahnya Pemandangan Hijau Persawahan       </h2>
-        <p>Pulau Bali, banyak memiliki areal persawahan, tapi tidak semua daerah di Bali, memiliki sawah terasering. Untuk melihat sawah terasering di Bali yang memiliki pemandangan bagus, ada di beberapa tempat. Yaitu Jatiluwih Tabanan, Pupuan Tabanan, Antosari (pantai Soka), Busung Biu Buleleng, Tirta Gangga Karangasem dan Tegalalang Ubud.</p>
+        <p>Pulau Bali, banyak memiliki areal persawahan, tapi tidak semua daerah di Bali, memiliki sawah terasering. Untuk melihat sawah terasering di Bali yang memiliki pemandangan bagus, ada di beberapa tempat, yaitu Jatiluwih Tabanan, Pupuan Tabanan, Antosari (pantai Soka), Busung Biu Buleleng, Tirta Gangga Karangasem dan Tegalalang Ubud.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <H2>Objek Favorit Wisatawan</H2>
-        <p>Saat ini, anda pasti bertanya di Ubud sebelah mana, untuk dapat melihat pemadangan sawah terasering? Lokasinya bernama desa Tegalalang. Terletak di sebelah utara Ubud. Tegalalang Ubud sangat terkenal di kalangan para wisatawan dan menjadi objek favorit wisatawan. Karena letaknya sangat berdekatan dengan objek wisata di Bali yang lainnya, seperti Goa Gajah, Tampak Siring dan Kintamani.</p>
+        <p>Untuk dapat melihat pemadangan sawah terasering, lokasinya bernama desa Tegalalang. Terletak di sebelah utara Ubud. Tegalalang Ubud sangat terkenal di kalangan para wisatawan dan menjadi objek favorit wisatawan. Karena letaknya sangat berdekatan dengan objek wisata di Bali yang lainnya, seperti Goa Gajah, Tampak Siring dan Kintamani.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <P>Di pinggir jalan di desa Tegalalang Ubud, anda akan melihat warung, restoran yang menawarkan pemandangan sawah terasering Ubud. Pemandangan sawah terasering Ubud tidak seluas seperti yang di Jatiluwih. Tapi menawarkan pemandangan tersering yang unik, karena lerengnya sangat miring. Untuk dapat menikmati pemandangan sawah terasering dengan nyaman. Anda hanya perlu membeli makanan atau minuman di salah satu warung yang menghadap ke pemandangan terasering Ubud.</P>
+      <section>
+        <P>Di pinggir jalan di desa Tegalalang Ubud, akan terlihat warung, restoran yang menawarkan pemandangan sawah terasering Ubud. Pemandangan sawah terasering Ubud tidak seluas seperti yang di Jatiluwih. Tapi menawarkan pemandangan tersering yang unik, karena lerengnya sangat miring. Untuk dapat menikmati pemandangan sawah terasering dengan nyaman. Wisatawan hanya perlu membeli makanan atau minuman di salah satu warung yang menghadap ke pemandangan terasering Ubud.</P>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <H2>Sawah Terasering Ubud - Tempat Wisata Yang Harus Dikunjungi  </H2>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <P>Bagi anda yang pertama kali datang untuk liburan ke Bali, pastilah tidak akan tahu cara mencari lokasi dari sawah terasering Ubud. Agar anda tidak tersesat, ada beberapa cara yang menurut kami terbaik untuk wisatawan yang belum pernah ke Tegalalang. Dengan menggunakan jasa sewa mobil dengan supir di Bali.</P>
+      <section>
+        <P>Bagi anda yang pertama kali datang untuk liburan ke Bali, pastilah tidak akan tahu cara mencari lokasi dari sawah terasering Ubud. Agar anda tidak tersesat, ada beberapa cara terbaik untuk wisatawan yang belum pernah ke Tegalalang. Dengan menggunakan jasa sewa mobil dengan supir di Bali.</P>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <P>Jika anda menyukai pemandangan alam yang masih asri, tempat wisata Ubud tidak hanya menawarkan pemadangan sawah. Ubud juga memiliki pemadangan sungai. Sungai Ayung namanya! Sungai Ayung sangat terkenal sebagi tempat untuk aktivitas arung jeram di Ubud. Jika anda ingin tahu lebih tentang rafting Ubud, silakan klik link ini, srafting sungai Ayung Ubud.   </P>
+      <section>
+        <P>Jika wisatawan menyukai pemandangan alam yang masih asri, tempat wisata Ubud tidak hanya menawarkan pemadangan sawah. Ubud juga memiliki pemadangan sungai. Sungai Ayung namanya. Sungai Ayung sangat terkenal sebagi tempat untuk aktivitas arung jeram di Ubud.</P>
       </section>
     </article>
   </body>
   <script src="build/build.js"></script>
+  <script src="bower_components/bespoke.js/dist/bespoke.min.js"></script>
+  <script src="bower_components/bespoke-bullets/dist/bespoke-bullets.min.js"></script>
+  <script src="bower_components/bespoke-scale/dist/bespoke-scale.min.js"></script>
+  <script src="bower_components/bespoke-hash/dist/bespoke-hash.min.js"></script>
+  <script src="bower_components/bespoke-progress/dist/bespoke-progress.min.js"></script>
+  <script src="bower_components/bespoke-state/dist/bespoke-state.min.js"></script>
+  <script src="bower_components/prism/prism.js"></script>
+  <script src="bower_components/prism/components/prism-bash.min.js"></script>
+  <script src="scripts/main.js"></script>
+  <script src="bower_components/jquery/jquery.min.js"></script>
+  <script src="bower_components/todc-bootstrap-main/dist/js/bootstrap.min.js"></script>
 </html>
