--- a/public html/8. Ubud Monkey Forest.html
+++ b/public html/8. Ubud Monkey Forest.html
@@ -3,56 +3,99 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Sawah Terasering Ubud</title>
+    <title>Wisata Ubud Bali</title>
     <link rel="stylesheet" type="text/css" href="build/build.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/prism/themes/prism.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/todc-bootstrap-main/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="build/main-presentation.css">
+    <link href="test.css" rel="stylesheet" type="text/css">
   </head>
-  <body>
+  <body class="classic">
+    <nav role="navigation" class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" data-toggle="collapse" data-target="presentation-chooser" class="navbar-toggle"><span class="sr-only"></span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="index.html" class="navbar-brand">Wisata Ubud Bali</a>
+        </div>
+        <div id="presentation-chooser" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="dropdown"><a data-toggle="dropdown" href="#" class="dropdown-toggle">Daftar Wisata <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="1. Tampak Siring.html">Tampak Siring</a></li>
+                <li><a href="2. Puri Ubud.html">Puri Ubud</a></li>
+                <li><a href="3. Pura Taman Saraswati.html">Pura Taman Saraswati</a></li>
+                <li><a href="4. Tari Kecak Ubud.html">Tari Kecak Ubud</a></li>
+                <li><a href="5. Lempad House.html">Lempad House</a></li>
+                <li><a href="6. Ayung Rafting.html">Ayung Rafting</a></li>
+                <li><a href="7. Sawah Terasering Ubud.html">Sawah Terasering Ubud</a></li>
+                <li><a href="8. Ubud Monkey Forest.html">Ubud Monkey Forest</a></li>
+                <li><a href="9. Arma Museum Ubud.html">Arma Museum Ubud</a></li>
+                <li><a href="10. Goa Gajah Ubud.html">Goa Gajah Ubud</a></li>
+                <li><a href="11. Gunung Kawi Bali.html">Gunung Kawi Bali</a></li>
+                <li><a href="12. Air Terjun Tegenungan.html">Air Terjun Tegenungan</a></li>
+                <li><a href="13. Tirta Sari Legong.html">Tirta Sari Legong (Percabangan)</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <article>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <h1>Ubud Monkey Forest</h1>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <p>Ubud sangat terkenal sampai kemancanegara akan seni, alam dan budaya. Saat anda mendengar salah satu nama objek wisata di Bali, yaitu Ubud monkey forest. Walaupun anda belum pernah berlibur ke objek wisata ini, anda pasti tahu dari namanya, bahwa anda akan dapat melihat kera di salah satu objek wisata Ubud ini</p>
+      <section>
+        <p>Ubud sangat terkenal sampai kemancanegara akan seni, alam dan budaya. Saat mendengar salah satu nama objek wisata di Bali, yaitu Ubud monkey forest. Walaupun belum pernah berlibur ke objek wisata ini, pasti tahu dari namanya, bahwa akan dapat melihat kera di salah satu objek wisata Ubud ini</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">       
+      <section>       
         <h2>Lokasi Objek Wisata Ubud Monkey Forest  </h2>
-        <p>Tentunya banyak hal yang dapat anda lakukan di Ubud. Seperti melihat sawah terasering di Tegalalang Ubud, wisata rafting di Ubud, menonton tari kecak Ubud dan liburan ke museum kesenian yang sangat banyak terdapat di Ubud.</p>
+        <p>Tentunya banyak hal yang dapat dilakukan di Ubud. Seperti melihat sawah terasering di Tegalalang Ubud, wisata rafting di Ubud, menonton tari kecak Ubud dan liburan ke museum kesenian yang sangat banyak terdapat di Ubud.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">       
-        <p>Ubud monkey forest salah satu objek wisata di Ubud yang wajib dikunjungi, jika anda sedang berlibur di Bali. Merupakan kawasan hutan lindung dan di dalam hutan ini, terdapat pura sakral umat Hindu Bali. Nama asli objek wisata Ubud monkey forest adalah Mandala Wisata Wenara Wana, tapi lebih dikenal dengan nama Sacred Monkey Forest Sanctuary.</p>
+      <section>       
+        <p>Ubud monkey forest salah satu objek wisata di Ubud yang wajib dikunjungi, jika wisatawan sedang berlibur di Bali. Merupakan kawasan hutan lindung dan di dalam hutan ini, terdapat pura sakral umat Hindu Bali. Nama asli objek wisata Ubud monkey forest adalah Mandala Wisata Wenara Wana, tapi lebih dikenal dengan nama Sacred Monkey Forest Sanctuary.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text"><img src="images/ubudMKF.jpg" class="big"></section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <P>Objek wisata monkey forest Ubud Bali, berada di Jalan Monkey Forest, Ubud provinsi Bali dengan kode pos 80571. Jika anda berangkat dari international airport menuju lokasi dari Ubud monkey forest, di perlukan waktu kurang lebih satu jam.</P>
+      <section><img src="images/ubudMKF.jpg" height="300" width="600" class="big"></section>
+      <section>
+        <P>Objek wisata monkey forest Ubud Bali, berada di Jalan Monkey Forest, Ubud provinsi Bali dengan kode pos 80571. Jika berangkat dari international airport menuju lokasi dari Ubud monkey forest, di perlukan waktu kurang lebih satu jam.</P>
         <p>Klik Disini Untuk Melihat, <a href = "http://goo.gl/maps/829iu">Peta Lokasi Monkey Forest Ubud.</a></p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <h2>Biaya Tiket Masuk Objek Wisata Ubud Monkey Forest </h2>
-        <p>Jika anda ingin memasuki objek wisata monkey forest Ubud, anda akan dikenakan biaya tiket masuk sebesar Rp 20.000 per orang. Harga tiket masuk Ubud Monkey Forest Rp 20.000 per orang, khusus untuk wisatawan domestik. Untuk parkir mobil akan dikenakan biaya Rp 5.000 per mobil.</p>
+        <p>Jika ingin memasuki objek wisata monkey forest Ubud, akan dikenakan biaya tiket masuk sebesar Rp 20.000 per orang. Harga tiket masuk Ubud Monkey Forest Rp 20.000 per orang, khusus untuk wisatawan domestik. Untuk parkir mobil akan dikenakan biaya Rp 5.000 per mobil.</p>
         <p>Lihat disini, <a href = "http://www.rentalmobilbali.net/harga-tiket-masuk-wisata-di-bali/">Daftar Harga Tiket Masuk Objek Wisata Di Bali</a></p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text"><img src="images/ubudMKF2.jpg" class="big"></section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <p>Di saat anda memasuki kawasan objek wisata monkey forest Bali, udara sejuk akan terasa, pepohonan hijau yang tinggi dan hijau, akan tampak dari areal parkir. Sebelum anda memasuki pintuk masuk, disebelah kiri dari pintu masuk, akan terdapat loket tiket, di loket inilah anda akan membayar tiket masuk. Di pintu masuk, anda akan melihat beberapa pedagang pisang yang dapat anda beli, jika ingin memberikan makan kera-kera. Jam buka dari tempat wisata mongkey forest di Ubud, dari jam 08:00 s/d 18:00 waktu Bali.</p>
+      <section><img src="images/ubudMKF2.jpg" height="300" width="600" class="big"></section>
+      <section>
+        <p>Di saat memasuki kawasan objek wisata monkey forest Bali, udara sejuk akan terasa, pepohonan hijau yang tinggi dan hijau, akan tampak dari areal parkir. Sebelum memasuki pintu masuk, disebelah kiri dari pintu masuk, akan terdapat loket tiket, di loket inilah wisatawan membayar tiket masuk. Di pintu masuk, wisatawan dapat melihat beberapa pedagang pisang yang dapat dibeli, jika ingin memberikan makan kera-kera. Jam buka dari tempat wisata mongkey forest di Ubud, dari jam 08:00 s/d 18:00 waktu Bali.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <p>Waktu terbaik untuk berkunjung ke Ubud Monkey Forest adalah pada jam 14:00. Karena hampir sebagian dari kera-kera sudah kenyang, mendapatkan makanan dari pengunjung sebelumnya. Hal ini membuat sifat agresif kera-kera sedikit berkurang. Di dalam objek wisata monkey forest di Ubud, banyak sekali terdapat petugas yang mengawasi kera-kera. Jadi pengunjung merasa nyaman dari kera-kera yang sedikit agresif.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <h3 class="bullet">Ada beberapa tips yang sebaiknya anda lakukan jika mengunjungi tempat wisata Ubud Monkey Forest</h3>
+      <section>
+        <h3 class="bullet">Ada beberapa tips yang sebaiknya dilakukan jika mengunjungi tempat wisata Ubud Monkey Forest</h3>
         <ol>
-          <li>Taruhlah barang berharga anda di dalam tas, seperti anting-anting, selendang, kacamata ataupun handphone. Jika anda ingin foto-foto, selalu pegang erat kamera anda. Barang-barang tersebut akan menarik minat dari kera-kera untuk mengambil.</li>
-          <li>Berjalanlah di jalan yang sudah disediakan, jangan berjalan melewati areal dari jalan yang sudah disediakan. Hal ini akan membuat kera-kera agresif, karena kera-kera mengira anda memasuki kawasan mereka.</li>
+          <li>Taruhlah barang berharga di dalam tas, seperti anting-anting, selendang, kacamata ataupun handphone. Jika ingin foto-foto, selalu pegang erat kamera. Barang-barang tersebut akan menarik minat dari kera-kera untuk mengambil.</li>
+          <li>Berjalanlah di jalan yang sudah disediakan, jangan berjalan melewati areal dari jalan yang sudah disediakan. Hal ini akan membuat kera-kera agresif, karena kera-kera mengira wisatawan memasuki kawasan mereka.</li>
           <li>Jangan memukul atau menyakiti kera-kera, hal ini akan membuat kera-kera yang lain akan menyerang anda.</li>
         </ol>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <h1>Objek Wisata Di Bali Favorit Wisatawan</h1>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <p>Selain monkey forest di Ubud, pulau Bali juga memiliki objek wisata lain untuk dapat melihat kera-kera. Tempat wisata tersebut antara lain, <a href = "http://www.rentalmobilbali.net/pura-uluwatu/">Pura Uluwatu</a>, <a href = "http://www.rentalmobilbali.net/alas-kedaton/">Alas Kedaton</a>, Pura Pulaki. Mudah-mudahan informasi yang kami tuliskan di situs ini, berguna bagi anda yang berencana berlibur di Bali dengan mengunjungi monkey forest Bali di Ubud.</p>
+      <section>
+        <p>Selain monkey forest di Ubud, pulau Bali juga memiliki objek wisata lain untuk dapat melihat kera-kera. Tempat wisata tersebut antara lain, <a href = "http://www.rentalmobilbali.net/pura-uluwatu/">Pura Uluwatu</a>, <a href = "http://www.rentalmobilbali.net/alas-kedaton/">Alas Kedaton</a>, Pura Pulaki. Mudah-mudahan informasi yang kami tuliskan di situs ini, berguna bagi wisatawan yang berencana berlibur di Bali dengan mengunjungi monkey forest Bali di Ubud.</p>
       </section>
     </article>
   </body>
   <script src="build/build.js"></script>
+  <script src="bower_components/bespoke.js/dist/bespoke.min.js"></script>
+  <script src="bower_components/bespoke-bullets/dist/bespoke-bullets.min.js"></script>
+  <script src="bower_components/bespoke-scale/dist/bespoke-scale.min.js"></script>
+  <script src="bower_components/bespoke-hash/dist/bespoke-hash.min.js"></script>
+  <script src="bower_components/bespoke-progress/dist/bespoke-progress.min.js"></script>
+  <script src="bower_components/bespoke-state/dist/bespoke-state.min.js"></script>
+  <script src="bower_components/prism/prism.js"></script>
+  <script src="bower_components/prism/components/prism-bash.min.js"></script>
+  <script src="scripts/main.js"></script>
+  <script src="bower_components/jquery/jquery.min.js"></script>
+  <script src="bower_components/todc-bootstrap-main/dist/js/bootstrap.min.js"></script>
 </html>
